# impact-nexus-task

./: README.md  VisionExtraction.ipynb  extractor.py  pyproject.toml
data/: NLP task_data_Black Bear Carbon.json  NLP task_data_Hyperdrive Innovation.json  NLP task_data_INFARM.json
