[tool.poetry]
name = "impact-nexus-task"
version = "0.1.0"
description = ""
authors = ["Oğuz Şerbetçi <oguz.serbetci@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.4"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
