[tool.poetry]
name = "impact-nexus-task"
version = "0.1.0"
description = ""
authors = ["Oğuz Şerbetçi <oguz.serbetci@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
spacy = "^2.3.4"
scikit-learn = "^0.23.2"
plotly = "^4.13.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
black = "^20.8b1"
ipywidgets = "^7.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
